test/tests/compiler/14_pointers/invalid_declarations/extra_credit/deref_label.plx
#  It's illegal to dereference a label
pub fn main(none) i32 {
    label lbl
    lbl[]
    return 0
}
